Clean up landing page.

--- a/index.html
+++ b/index.html
@@ -5,23 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <meta name="Geospatial Services Framework" content="">
+    <meta name="Exelis Visual Information Solutions, Inc." content="">
+    <link rel="icon" href="favicon.ico">
 
-    <!-- Bootstrap -->
+    <title>Geospatial Services Framework</title>
+
+    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Custom styles for this template -->
+    <link href="./style/style.css" rel="stylesheet">
+
   </head>
+
   <body>
 
-      <div class="jumbotron">
-        <h1>Geospatial Services Framework</h1>
-        <p>Welcome to the Geospatial Services Framework GitHub pages</p>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h2>Geospatial Services Framework</h2>
+        <p>Advanced Analytics at Scale</p>
+        <p><a class="btn btn-primary btn-md" href="http://www.harrisgeospatial.com/" role="button">Learn more &raquo;</a></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+          <h3>GSF JavaScript SDK</h3>
+          <h3><small>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</small></h3>
+          <p><a class="btn btn-md" href="gsf-js-client-sdk/index.html" role="button">View documentation &raquo;</a></p>
+          <p><a class="btn btn-md" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk" role="button">View on Github &raquo;</a></p>
+       </div>
+      </div>
+      <hr>
+      <footer>
+        <p>&copy; 2017 Exelis Visual Information Solutions, Inc.</p>
+      </footer>
+    </div> <!-- /container -->
 
   </body>
 </html>
