Change button titles

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="col-md-4">
           <h3>GSF JavaScript SDK</h3>
           <h3><small>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</small></h3>
-          <p><a class="btn btn-md" href="sdk-docs/index.html" role="button">View documentation &raquo;</a></p>
-          <p><a class="btn btn-md" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk" role="button">View on Github &raquo;</a></p>
+          <p><a class="btn btn-md" href="sdk-docs/index.html" role="button">View Documentation &raquo;</a></p>
+          <p><a class="btn btn-md" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk" role="button">View Source &raquo;</a></p>
        </div>
       </div>
       <hr>
