--- a/sdk-docs/manual/index.html
+++ b/sdk-docs/manual/index.html
@@ -41,15 +41,14 @@
 <div data-ice="manual" data-toc-name="tutorial">
     <ul class="manual-toc">
       
-    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
-<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
+    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
+<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#about-the-sdk" data-ice="link">About the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#basic-usage" data-ice="link">Basic Usage</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#requirements" data-ice="link">Requirements</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#building-the-sdk" data-ice="link">Building the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#testing-the-sdk" data-ice="link">Testing the SDK</a></li>
 <li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#using-a-test-server" data-ice="link">Using a Test Server</a></li>
-<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#using-an-existing-gsf-server" data-ice="link">Using an Existing GSF Server</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#building-the-documentation" data-ice="link">Building the Documentation</a></li>
 <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html" data-ice="link">Examples</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#list-available-services" data-ice="link">List Available Services</a></li>
@@ -95,7 +94,7 @@
   <div class="manual-cards">
     
   <div class="manual-card-wrap" data-ice="cards">
-      <h1 data-ice="label" class="manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;"><span data-ice="label-inner">GSF JavaScript Client SDK</span></h1>
+      <h1 data-ice="label" class="manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;"><span data-ice="label-inner">GSF JavaScript Client SDK</span></h1>
       <div class="manual-card">
         <div data-ice="card"><h1>GSF JavaScript Client SDK</h1><h2>About the SDK</h2><p>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</p><ol>
 <li>This repository contains pre-built distributable files located in the <code>/dist/</code> directory.<ul>
@@ -153,7 +152,7 @@ task.submitAndWait(NDVIParameters).then((results) =&gt; {
 <li><p>Run the build script.</p>
 <p>$ npm run build</p>
 </li>
-</ol><h2>Testing the SDK</h2><h4>Using a Test Server</h4><p>We have provided a simple mock server implementation that can be used for very basic testing of the SDK.</p><p>  $ npm run unit-test</p><h4>Using an Existing GSF Server</h4><p>It is also possible to run the tests against a running GSF server.</p><p>  $ npm run test</p><h2>Building the Documentation</h2><ol>
+</ol><h2>Testing the SDK</h2><h4>Using a Test Server</h4><p>We have provided a simple mock server implementation that can be used for very basic testing of the SDK.</p><p>  $ npm run test</p><h2>Building the Documentation</h2><ol>
 <li><p>Build the documentation.</p>
 <p>$ npm run help</p>
 </li>
