Updating documentation for 1.0.10 release

--- a/sdk-docs/typedef/index.html
+++ b/sdk-docs/typedef/index.html
@@ -2228,21 +2228,21 @@ there is one.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.displayName</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.displayName</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
       <td data-ice="appendix"><ul><li>optional</li></ul></td>
       <td data-ice="description"><p>A display name for the parameter.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.description</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.description</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
       <td data-ice="appendix"><ul><li>optional</li></ul></td>
       <td data-ice="description"><p>A description of the parameter.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.parameterType</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.parameterType</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
       <td data-ice="appendix"></td>
       <td data-ice="description"><p>A string set to either &quot;required&quot; or
@@ -2250,21 +2250,21 @@ there is one.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.direction</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.direction</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
       <td data-ice="appendix"></td>
       <td data-ice="description"><p>A string set to either &quot;INPUT&quot; or &quot;OUTPUT&quot;.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.dataType</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.dataType</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
       <td data-ice="appendix"></td>
       <td data-ice="description"><p>A type for the parameter.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.choiceList</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.choiceList</td>
       <td data-ice="type"><span><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span><span>[]</span></span></td>
       <td data-ice="appendix"><ul><li>optional</li></ul></td>
       <td data-ice="description"><p>A list of values that will be accepted as input
@@ -2272,7 +2272,7 @@ there is one.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;taskName&gt;.default</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.default</td>
       <td data-ice="type"><span>any</span></td>
       <td data-ice="appendix"><ul><li>optional</li></ul></td>
       <td data-ice="description"><p>A default value for the parameter.</p>
