--- a/sdk-docs/manual/changelog/CHANGELOG.html
+++ b/sdk-docs/manual/changelog/CHANGELOG.html
@@ -41,10 +41,12 @@
 <div data-ice="manual" data-toc-name="tutorial">
     <ul class="manual-toc">
       
-    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
-<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
+    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
+<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#about-the-sdk" data-ice="link">About the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#basic-usage" data-ice="link">Basic Usage</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#importing-the-sdk" data-ice="link">Importing the SDK</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#including-the-sdk-with-a-script-tag" data-ice="link">Including the SDK with a Script Tag</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#requirements" data-ice="link">Requirements</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#building-the-sdk" data-ice="link">Building the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#testing-the-sdk" data-ice="link">Testing the SDK</a></li>
@@ -65,6 +67,9 @@
 <li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#server-progress-events" data-ice="link">Server Progress Events</a></li>
 <li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#job-progress-events" data-ice="link">Job Progress Events</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#cancelling-jobs" data-ice="link">Cancelling Jobs</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#-a-name-typescript-a-typescript-example" data-ice="link"> Typescript Example</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#-a-name-bestpractices-a-best-practices" data-ice="link"> Best Practices</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#connecting-to-servers" data-ice="link">Connecting to Servers</a></li>
 </ul>
   </div>
 <div data-ice="manual" data-toc-name="reference">
