--- a/index.html
+++ b/index.html
@@ -33,15 +33,23 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
+        <div class="col-md-2"></div>
         <div class="col-md-4">
+          <h3>GSF Py</h3>
+          <h3><small>GSF Py provides a client-side Python library for interacting with GSF.</small></h3>
+          <p><a class="btn btn-primary btn-md" href="http://gsf-py.readthedocs.io/en/latest/" role="button">View Documentation &raquo;</a></p>
+          <p><a class="btn btn-primary btn-md" href="https://github.com/geospatial-services-framework/gsfpy" role="button">View Source &raquo;</a></p>
         </div>
+        <div></div>
         <div class="col-md-4">
           <h3>GSF JavaScript Client SDK</h3>
           <h3><small>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</small></h3>
-          <p><a class="btn btn-md" href="sdk-docs/index.html" role="button">View Documentation &raquo;</a></p>
-          <p><a class="btn btn-md" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk" role="button">View Source &raquo;</a></p>
-       </div>
+          <p><a class="btn btn-primary btn-md" href="sdk-docs/index.html" role="button">View Documentation &raquo;</a></p>
+          <p><a class="btn btn-primary btn-md" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk" role="button">View Source &raquo;</a></p>
+        </div>
+        <div class="col-md-2"></div>
       </div>
+      
       <hr>
       <footer>
         <p>&copy; 2017 Exelis Visual Information Solutions, Inc.</p>
