Update docs for v2.0.

--- a/sdk-docs/file/src/utils/utils.js.html
+++ b/sdk-docs/file/src/utils/utils.js.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <base data-ice="baseUrl" href="../../">
-  <title data-ice="title">src/Server.js | GSF JavaScript Client SDK API Document</title>
+  <base data-ice="baseUrl" href="../../../">
+  <title data-ice="title">src/utils/utils.js | GSF JavaScript Client SDK API Document</title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link type="text/css" rel="stylesheet" href="css/prettify-tomorrow.css">
   <script src="script/prettify/prettify.js"></script>
@@ -63,7 +63,7 @@
 </div>
 </nav>
 
-<div class="content" data-ice="content"><h1 data-ice="title">src/Server.js</h1>
+<div class="content" data-ice="content"><h1 data-ice="title">src/utils/utils.js</h1>
 <pre class="source-code line-number raw-source-code"></pre>
 <p data-ice="emptySourceCode">Sorry, this documentation does not provide source code.</p>
 </div>
