--- a/sdk-docs/identifiers.html
+++ b/sdk-docs/identifiers.html
@@ -20,7 +20,7 @@
   <a href="identifiers.html">Reference</a>
   <a href="source.html">Source</a>
   
-  <a data-ice="repoURL" href="https://github.com/geospatial-services-framework" class="repo-url-github">Repository</a>
+  <a data-ice="repoURL" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk.git" class="repo-url-github">Repository</a>
   <div class="search-box">
   <span>
     <img src="./image/search.png">
