--- a/sdk-docs/manual/tutorial/getting-started.html
+++ b/sdk-docs/manual/tutorial/getting-started.html
@@ -20,7 +20,7 @@
   <a href="identifiers.html">Reference</a>
   <a href="source.html">Source</a>
   
-  <a data-ice="repoURL" href="https://github.com/geospatial-services-framework" class="repo-url-github">Repository</a>
+  <a data-ice="repoURL" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk.git" class="repo-url-github">Repository</a>
   <div class="search-box">
   <span>
     <img src="./image/search.png">
@@ -41,17 +41,21 @@
 <div data-ice="manual" data-toc-name="tutorial">
     <ul class="manual-toc">
       
-    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
-<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
+    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
+<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#about-the-sdk" data-ice="link">About the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#basic-usage" data-ice="link">Basic Usage</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#importing-the-sdk" data-ice="link">Importing the SDK</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#using-ecmascript-2015" data-ice="link">Using ECMAScript 2015</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#using-node-js" data-ice="link">Using Node.js</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#including-the-sdk-with-a-script-tag" data-ice="link">Including the SDK with a Script Tag</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#requirements" data-ice="link">Requirements</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#server-sent-events" data-ice="link">Server Sent Events</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#building-the-sdk" data-ice="link">Building the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#testing-the-sdk" data-ice="link">Testing the SDK</a></li>
 <li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#using-a-test-server" data-ice="link">Using a Test Server</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#run-tests-in-the-browser-against-mock-server-" data-ice="link">Run tests in the browser against mock server.</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#run-tests-in-node-js-against-mock-server-" data-ice="link">Run tests in Node.js against mock server.</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#building-the-documentation" data-ice="link">Building the Documentation</a></li>
 <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html" data-ice="link">Examples</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#list-available-services" data-ice="link">List Available Services</a></li>
@@ -84,7 +88,10 @@
 <div data-ice="manual" data-toc-name="changelog">
     <ul class="manual-toc">
       
-    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-changelog" data-section-count="&#x25A0;" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html" data-ice="link">Change Log</a></li>
+    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-changelog" data-section-count="&#x25A0;&#x25A0;" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html" data-ice="link">Change Log</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-0-0-2017-07-24" data-ice="link">2.0.0 / 2017-07-24</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#breaking-changes" data-ice="link">Breaking Changes</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#1-0-0-2017-02-26" data-ice="link">1.0.0 / 2017-02-26</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 </ul>
@@ -101,24 +108,33 @@
   <div data-ice="content"><h1 id="getting-started">Getting Started</h1>
 <h1 id="gsf-javascript-client-sdk">GSF JavaScript Client SDK</h1>
 <h2 id="about-the-sdk">About the SDK</h2>
-<p>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</p>
+<p>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.  The SDK works in both the browser and Node.js.</p>
 <ol>
 <li>This repository contains pre-built distributable files located in the <code>/dist/</code> directory.<ul>
-<li><code>/dist/GSF.js</code> - The non-minified bundle.</li>
-<li><code>/dist/GSF.map.js</code> - The non-minified bundle source map file.</li>
-<li><code>/dist/GSF.min.js</code> - The minified bundle.</li>
-<li><code>/dist/GSF.min.js.map</code> - The minified bundle source map file.</li>
+<li><code>/dist/GSF-node.js</code> - The Node.js bundle.</li>
+<li><code>/dist/GSF-node.js.map</code> - The Node.js bundle source map.</li>
+<li><code>/dist/GSF.js</code> - The non-minified web bundle.</li>
+<li><code>/dist/GSF.js.map</code> - The non-minified web bundle source map file.</li>
+<li><code>/dist/GSF.min.js</code> - The minified web bundle.</li>
+<li><code>/dist/GSF.min.js.map</code> - The minified web bundle source map file.</li>
 </ul>
 </li>
 </ol>
 <h2 id="basic-usage">Basic Usage</h2>
 <h3 id="importing-the-sdk">Importing the SDK</h3>
+<h4 id="using-ecmascript-2015">Using ECMAScript 2015</h4>
 <ul>
 <li><p>Import everything with GSF namespace:</p>
 <p><code>import * as GSF from &apos;gsf-js-client-sdk&apos;;</code></p>
 </li>
 <li><p>Import specific classes:</p>
 <p><code>import { Job, Task } from &apos;gsf-js-client-sdk&apos;;</code></p>
+</li>
+</ul>
+<h4 id="using-node-js">Using Node.js</h4>
+<ul>
+<li><p>Require the SDK:</p>
+<p><code>const GSF = require(&apos;gsf-js-client-sdk/dist/GSF-node&apos;);</code></p>
 </li>
 </ul>
 <h3 id="including-the-sdk-with-a-script-tag">Including the SDK with a Script Tag</h3>
@@ -132,10 +148,13 @@
 <li><p>Below is a simple example of running a job and retrieving the results.  You will need to update the server address and port below to reflect the server that you are using.</p>
 </li>
 </ol>
-<pre><code class="lang-javascript"><code class="source-code prettyprint">// GSF Server
+<pre><code class="lang-javascript"><code class="source-code prettyprint">const myAddress = &apos;MyServer&apos;;
+const myPort = 9191;
+
+// GSF Server
 const server = GSF.server({
-  address: &apos;MyServer&apos;,
-  port: &apos;9191&apos;
+  address: myAddress,
+  port: myPort
   });
 
 // Create a service object.
@@ -148,7 +167,7 @@ const NDVIParameters = {
   parameters: {
     INPUT_RASTER: {
       FACTORY: &apos;URLRaster&apos;,
-      URL: &apos;http://MyServer:9191/ese/data/qb_boulder_msi&apos;
+      URL: &apos;http://&apos; + myAddress + &apos;:&apos; + myPort + &apos;/ese/data/qb_boulder_msi&apos;
     },
     INDEX: &apos;Normalized Difference Vegetation Index&apos;
   }
@@ -164,7 +183,7 @@ task.submitAndWait(NDVIParameters).then((results) =&gt; {
 </code></pre>
 <h2 id="requirements">Requirements</h2>
 <h3 id="server-sent-events">Server Sent Events</h3>
-<p>The GSF JavaScript Client SDK relies on <a href="https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events">server-sent events</a> for communication with the server.  Developers who wish to build apps that run on browsers lacking EventSource support will want to use a polyfill.</p>
+<p>The GSF JavaScript Client SDK relies on <a href="https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events">server-sent events</a> for communication with the server.  Developers who wish to build apps that run on browsers lacking EventSource support will want to use a polyfill.  This is not necessary when using the SDK in Node.js.</p>
 <p>To view a list of the browsers that support EventSource please go here: <a href="https://caniuse.com/#search=eventsource">https://caniuse.com/#search=eventsource</a></p>
 <p>There are several polyfills available that provide implementations of the EventSource API.  One such polyfill that is available from the npm and Bower package managers is called &apos;eventsource-polyfill&apos;.  For information on installation and usage, see <a href="https://github.com/amvtek/EventSource">https://github.com/amvtek/EventSource</a>.</p>
 <h2 id="building-the-sdk">Building the SDK</h2>
@@ -181,8 +200,11 @@ task.submitAndWait(NDVIParameters).then((results) =&gt; {
 </ol>
 <h2 id="testing-the-sdk">Testing the SDK</h2>
 <h4 id="using-a-test-server">Using a Test Server</h4>
-<p>We have provided a simple mock server implementation that can be used for very basic testing of the SDK.</p>
+<p>We have provided a simple mock server implementation that can be used for very basic testing of the SDK.  There are several other test scripts available.  Please see the scripts section of the package.json file for more information.</p>
+<h5 id="run-tests-in-the-browser-against-mock-server-">Run tests in the browser against mock server.</h5>
 <p>  $ npm run test</p>
+<h5 id="run-tests-in-node-js-against-mock-server-">Run tests in Node.js against mock server.</h5>
+<p>  $ npm run test-node</p>
 <h2 id="building-the-documentation">Building the Documentation</h2>
 <ol>
 <li><p>Build the documentation.</p>
