--- a/sdk-docs/source.html
+++ b/sdk-docs/source.html
@@ -20,7 +20,7 @@
   <a href="identifiers.html">Reference</a>
   <a href="source.html">Source</a>
   
-  <a data-ice="repoURL" href="https://github.com/geospatial-services-framework" class="repo-url-github">Repository</a>
+  <a data-ice="repoURL" href="https://github.com/geospatial-services-framework/gsf-js-client-sdk.git" class="repo-url-github">Repository</a>
   <div class="search-box">
   <span>
     <img src="./image/search.png">
@@ -82,41 +82,41 @@
       <td data-ice="filePath"><span><a href="file/src/GSF.js.html">src/GSF.js</a></span></td>
       <td data-ice="identifier" class="identifiers">-</td>
       <td class="coverage"><span data-ice="coverage">-</span></td>
-      <td style="display: none;" data-ice="size">403 byte</td>
+      <td style="display: none;" data-ice="size">405 byte</td>
       <td style="display: none;" data-ice="lines">15</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 15:53:49 (UTC)</td>
+      <td style="display: none;" data-ice="updated">2017-08-05 20:29:05 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/Job.js.html">src/Job.js</a></span></td>
       <td data-ice="identifier" class="identifiers"><span><a href="class/src/Job.js~Job.html">Job</a></span></td>
       <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">6/6</span></td>
-      <td style="display: none;" data-ice="size">8490 byte</td>
-      <td style="display: none;" data-ice="lines">247</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 15:53:49 (UTC)</td>
+      <td style="display: none;" data-ice="size">8644 byte</td>
+      <td style="display: none;" data-ice="lines">250</td>
+      <td style="display: none;" data-ice="updated">2017-08-05 20:29:05 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/Server.js.html">src/Server.js</a></span></td>
       <td data-ice="identifier" class="identifiers"><span><a href="class/src/Server.js~Server.html">Server</a></span></td>
       <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">12/12</span></td>
-      <td style="display: none;" data-ice="size">8644 byte</td>
-      <td style="display: none;" data-ice="lines">269</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 15:53:49 (UTC)</td>
+      <td style="display: none;" data-ice="size">9030 byte</td>
+      <td style="display: none;" data-ice="lines">279</td>
+      <td style="display: none;" data-ice="updated">2017-08-05 20:29:05 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/Service.js.html">src/Service.js</a></span></td>
       <td data-ice="identifier" class="identifiers"><span><a href="class/src/Service.js~Service.html">Service</a></span></td>
       <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">7/7</span></td>
-      <td style="display: none;" data-ice="size">4671 byte</td>
-      <td style="display: none;" data-ice="lines">142</td>
-      <td style="display: none;" data-ice="updated">2017-07-03 18:03:56 (UTC)</td>
+      <td style="display: none;" data-ice="size">4729 byte</td>
+      <td style="display: none;" data-ice="lines">146</td>
+      <td style="display: none;" data-ice="updated">2017-08-05 20:29:05 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/Task.js.html">src/Task.js</a></span></td>
       <td data-ice="identifier" class="identifiers"><span><a href="class/src/Task.js~Task.html">Task</a></span></td>
       <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">7/7</span></td>
-      <td style="display: none;" data-ice="size">6902 byte</td>
+      <td style="display: none;" data-ice="size">6960 byte</td>
       <td style="display: none;" data-ice="lines">183</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 20:25:54 (UTC)</td>
+      <td style="display: none;" data-ice="updated">2017-08-03 19:31:16 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/utils/ESE_API.js.html">src/utils/ESE_API.js</a></span></td>
@@ -124,7 +124,7 @@
       <td class="coverage"><span data-ice="coverage">-</span></td>
       <td style="display: none;" data-ice="size">203 byte</td>
       <td style="display: none;" data-ice="lines">9</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 15:53:49 (UTC)</td>
+      <td style="display: none;" data-ice="updated">2017-08-04 17:48:23 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/utils/ESE_STATUS_MAP.js.html">src/utils/ESE_STATUS_MAP.js</a></span></td>
@@ -132,7 +132,7 @@
       <td class="coverage"><span data-ice="coverage">-</span></td>
       <td style="display: none;" data-ice="size">148 byte</td>
       <td style="display: none;" data-ice="lines">6</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 15:53:49 (UTC)</td>
+      <td style="display: none;" data-ice="updated">2017-08-04 17:48:19 (UTC)</td>
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/src/utils/EVENTS.js.html">src/utils/EVENTS.js</a></span></td>
@@ -140,7 +140,15 @@
       <td class="coverage"><span data-ice="coverage">-</span></td>
       <td style="display: none;" data-ice="size">392 byte</td>
       <td style="display: none;" data-ice="lines">18</td>
-      <td style="display: none;" data-ice="updated">2017-04-05 15:53:49 (UTC)</td>
+      <td style="display: none;" data-ice="updated">2017-08-04 17:48:12 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/utils/utils.js.html">src/utils/utils.js</a></span></td>
+      <td data-ice="identifier" class="identifiers">-</td>
+      <td class="coverage"><span data-ice="coverage">-</span></td>
+      <td style="display: none;" data-ice="size">272 byte</td>
+      <td style="display: none;" data-ice="lines">13</td>
+      <td style="display: none;" data-ice="updated">2017-08-05 20:29:05 (UTC)</td>
     </tr>
 </tbody>
 </table>
