--- a/sdk-docs/typedef/index.html
+++ b/sdk-docs/typedef/index.html
@@ -1868,6 +1868,14 @@ In some cases the job can start before the callback is registered.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="1">
+      <td data-ice="name" data-depth="1">ServerArgs.headers</td>
+      <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object">Object</a></span></td>
+      <td data-ice="appendix"><ul><li>optional</li>
+<li>default: {}</li></ul></td>
+      <td data-ice="description"><p>The headers to be used in requests.</p>
+</td>
+    </tr>
+<tr data-ice="property" data-depth="1">
       <td data-ice="name" data-depth="1">ServerArgs.APIRoot</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
       <td data-ice="appendix"><ul><li>optional</li>
@@ -2279,7 +2287,7 @@ there is one.</p>
 </td>
     </tr>
 <tr data-ice="property" data-depth="2">
-      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.default</td>
+      <td data-ice="name" data-depth="2">parameters.&lt;parameterName&gt;.defaultValue</td>
       <td data-ice="type"><span>any</span></td>
       <td data-ice="appendix"><ul><li>optional</li></ul></td>
       <td data-ice="description"><p>A default value for the parameter.</p>
