--- a/sdk-docs/manual/index.html
+++ b/sdk-docs/manual/index.html
@@ -89,6 +89,8 @@
     <ul class="manual-toc">
       
     <li data-ice="manualNav" class="indent-h1 manual-color manual-color-changelog" data-section-count="&#x25A0;&#x25A0;" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html" data-ice="link">Change Log</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-1-0-2018-03-21" data-ice="link">2.1.0 / 2018-03-21</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-0-0-2017-07-24" data-ice="link">2.0.0 / 2017-07-24</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#breaking-changes" data-ice="link">Breaking Changes</a></li>
@@ -1183,7 +1185,9 @@ task.submitAndWait(taskParameters)
 <div class="manual-card-wrap" data-ice="cards">
       <h1 data-ice="label" class="manual-color manual-color-changelog" data-section-count="&#x25A0;&#x25A0;"><span data-ice="label-inner">Change Log</span></h1>
       <div class="manual-card">
-        <div data-ice="card"><h1>Change Log</h1><p>All notable changes to this project will be documented in this file.</p><h2>2.0.0 / 2017-07-24</h2><h3>New Features</h3><ul>
+        <div data-ice="card"><h1>Change Log</h1><p>All notable changes to this project will be documented in this file.</p><h2>2.1.0 / 2018-03-21</h2><h3>New Features</h3><ul>
+<li>Added headers object to the ServerArgs object to allow custom headers to be used in requests.</li>
+</ul><h2>2.0.0 / 2017-07-24</h2><h3>New Features</h3><ul>
 <li>Added the ability to use the SDK in Node.js.  See documentation for more details.</li>
 </ul><h3>Breaking Changes</h3><ul>
 <li>Task class: Replaced &apos;server&apos; and &apos;serviceName&apos; constructor arguments with &apos;service&apos;.  This only affects Task objects created using the Task class constructor; there is no change to Task objects created using the Service.Task() method.  See API documentation for more details.</li>
