--- a/sdk-docs/manual/changelog/CHANGELOG.html
+++ b/sdk-docs/manual/changelog/CHANGELOG.html
@@ -88,7 +88,10 @@
 <div data-ice="manual" data-toc-name="changelog">
     <ul class="manual-toc">
       
-    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-changelog" data-section-count="&#x25A0;&#x25A0;" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html" data-ice="link">Change Log</a></li>
+    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-changelog" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html" data-ice="link">Change Log</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-2-0-2018-03-22" data-ice="link">2.2.0 / 2018-03-22</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#bug-fixes" data-ice="link">Bug Fixes</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-1-0-2018-03-21" data-ice="link">2.1.0 / 2018-03-21</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-0-0-2017-07-24" data-ice="link">2.0.0 / 2017-07-24</a></li>
@@ -109,6 +112,15 @@
   </div>
   <div data-ice="content"><h1 id="change-log">Change Log</h1>
 <p>All notable changes to this project will be documented in this file.</p>
+<h2 id="2-2-0-2018-03-22">2.2.0 / 2018-03-22</h2>
+<h3 id="new-features">New Features</h3>
+<ul>
+<li>Added Server.jobInfoList() for fetching an array of the current JobInfo objects.</li>
+</ul>
+<h3 id="bug-fixes">Bug Fixes</h3>
+<ul>
+<li>Fix #10 - Server.jobInfoList() will retrieve full JobInfo objects from the server.</li>
+</ul>
 <h2 id="2-1-0-2018-03-21">2.1.0 / 2018-03-21</h2>
 <h3 id="new-features">New Features</h3>
 <ul>
